<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Magic Cave Activity -->
    <string name="app_name">Magic Cave</string>
    <string name="title_activity_main_menu">Magic Cave</string>
    <string name="choose_level_btn">Choose level</string>
    <string name="random_level_btn">Random level</string>
    <string name="rules_btn">Rules</string>
    <string name="about_btn">Apple</string>
    <string name="quit_btn">Quit</string>
    <string name="task_label">The Task</string>
    <string name="task_text">The task of every level is simple. You are here to light all the candles! You can change the state of any candle but all of them are somehow connected to each other so changing state of only one candle will cause some of its neighbours to change their state too. Don\'t mess up and you will beat the puzzle!</string>
    <string name="modes_label">Game modes</string>
    <string name="modes_text">You can choose between two different modes: the cave mode and the random mode. In the first one you will have to solve puzzles from nine different caves in order to get magic stars!=) In the second mode you will have a chance to try your best on a randomly generated puzzle. Be aware these puzzles might be not that simple to crack!</string>
    <string name="control_label">Controls</string>
    <string name="control_text">You can change a state of a candle by simply touching over it. If you get stack, you can press button *Magic* and our super-duper algorithm will show you the best solution and a some magic! You can try to guess some hidden connections between candles. To do so press button *Feel lucky!* and choose two candles. You also can press menu button if you want to restart level or to get back to main menu.</string>

    <!-- Game Fragment -->
    <string name="game_menu_btn">Menu</string>
    <string name="game_resume_btn">Resume</string>
    <string name="game_main_menu_btn">Main menu</string>
    <string name="game_restart_btn">Restart</string>
    <string name="game_next_btn">Next</string>
    <string name="game_win_label">Congratulations!</string>
    <string name="game_win_text" formatted="false">You solved the puzzle in %d %s. The best solution takes %d moves.</string>
    <string name="game_help_text">Magic</string>
    <string name="game_connect_text">Feel Lucky!</string>

    <!-- Applied Math Department Activity -->
    <string name="about_app_name">Applied Math Dep</string>
    <string name="str_depth">Applied Math Department</string>
    <string name="str_university">St.Petersburg State Polytechnical University</string>
    <string name="str_toweb">To site</string>

</resources>