<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_menu_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_main_menu"
        android:textColor="@color/main_menu_label_color"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/fire_candle_animation"
            android:id="@+id/candleViewLeft" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <TableRow android:gravity="center" >

                <Button
                    style="@style/MainMenuOptionText"
                    android:id="@+id/choose_level_btn"
                    android:text="@string/choose_level_btn" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    style="@style/MainMenuOptionText"
                    android:id="@+id/random_level_btn"
                    android:text="@string/random_level_btn" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    style="@style/MainMenuOptionText"
                    android:id="@+id/rules_btn"
                    android:text="@string/rules_btn" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    style="@style/MainMenuOptionText"
                    android:id="@+id/about_btn"
                    android:text="@string/about_btn" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    style="@style/MainMenuOptionText"
                    android:id="@+id/quit_btn"
                    android:text="@string/quit_btn" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/fire_candle_animation"
            android:id="@+id/candleViewRight" />

    </LinearLayout>

</LinearLayout>