<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_menu_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/game_label"
        android:textColor="@color/main_menu_label_color"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ru.dinter.magiccave.view.BigCandleView
            android:id="@+id/bigCandleView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <TableRow android:gravity="center" >

                <Button
                    android:id="@+id/choose_level_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_level_btn"
                    android:textColor="@color/main_menu_text_color"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    android:id="@+id/random_level_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_level_btn"
                    android:textColor="@color/main_menu_text_color"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    android:id="@+id/rules_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rules_btn"
                    android:textColor="@color/main_menu_text_color"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    android:id="@+id/quit_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/quit_btn"
                    android:textColor="@color/main_menu_text_color"
                    android:textSize="40sp" />
            </TableRow>
        </TableLayout>

        <ru.dinter.magiccave.view.BigCandleView
            android:id="@+id/bigCandleView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>